--- a/scss/_food_chart.scss
+++ b/scss/_food_chart.scss
@@ -13,15 +13,17 @@
 }
 
 .food-chart-days-card {
-    width: 40vw;
-    height: 100vh;
+    width: 50vw;
+    min-height: 90vh;
+    max-height: 90vh;
     background-color: palette.$secondary;
     color: palette.$third;
     border-radius: 20px;
     font-weight: bold;
     font-family: 'Inter', sans-serif;
     margin: 1rem;
-    padding: 0;
+    padding: 3rem;
+    overflow-y: scroll;
 }
 
 .food-chart-text {
@@ -40,6 +42,7 @@
 .food-chart-day-text {
     font-weight: normal;
     letter-spacing: 1px;
+    overflow-y: auto;
 }
 
 ul {
